deploy: BDHU/notes-source@fccd082614a9ef0fffff740844de24ace9a98133

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ If you want to get in touch with me, please visit my website, or email me at bod
 <link rel=alternate hreflang=zh href=http://www.bodunhu.com/notes/zh/ title="My Notes">
 <link rel=stylesheet href=/notes/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/notes/flexsearch.min.js></script>
-<script defer src=/notes/en.search.min.e70ea40863e3d25632957e21d6df2607b9610ce4d4fd013b0f4d5d2a2f94582d.js integrity="sha256-5w6kCGPj0lYylX4h1t8mB7lhDOTU/QE7D01dKi+UWC0=" crossorigin=anonymous></script>
+<script defer src=/notes/en.search.min.edc9927461c161c3257bbb2df4b5358ade79340de856b91853c894c588806f2f.js integrity="sha256-7cmSdGHBYcMle7st9LU1it55NA3oVrkYU8iUxYiAby8=" crossorigin=anonymous></script>
 <link rel=alternate type=application/rss+xml href=http://www.bodunhu.com/notes/index.xml title="My Notes">
 </head>
 <body dir=ltr>
@@ -56,25 +56,25 @@ Chinese
 </ul>
 <ul>
 <li class=book-section-flat>
-<span>Ml Inference</span>
+<span>Ml System</span>
 <ul>
 <li>
-<input type=checkbox id=section-490999bea76cea2a91b695494816e918 class=toggle>
-<label for=section-490999bea76cea2a91b695494816e918 class="flex justify-between">
+<input type=checkbox id=section-b49da0609e6e940d576943fc081e834a class=toggle>
+<label for=section-b49da0609e6e940d576943fc081e834a class="flex justify-between">
 <a role=button>Papers</a>
 </label>
 <ul>
 <li>
-<a href=http://www.bodunhu.com/notes/docs/ml-inference/papers/clipper/>Clipper</a>
+<a href=http://www.bodunhu.com/notes/docs/ml-system/papers/clipper/>Clipper</a>
 </li>
 <li>
-<a href=http://www.bodunhu.com/notes/docs/ml-inference/papers/gandiva/>Gandiva</a>
+<a href=http://www.bodunhu.com/notes/docs/ml-system/papers/gandiva/>Gandiva</a>
 </li>
 <li>
-<a href=http://www.bodunhu.com/notes/docs/ml-inference/papers/infaas/>INFaaS</a>
+<a href=http://www.bodunhu.com/notes/docs/ml-system/papers/infaas/>INFaaS</a>
 </li>
 <li>
-<a href=http://www.bodunhu.com/notes/docs/ml-inference/papers/pollux/>Pollux</a>
+<a href=http://www.bodunhu.com/notes/docs/ml-system/papers/pollux/>Pollux</a>
 </li>
 </ul>
 </li>
